[tool.poetry]
name = "pyspark-command-service"
version = "0.1.0"
description = ""
authors = ["Sigmar Stefansson <sigmarkarl@hotmail.com>"]
readme = "README.md"
packages = [{include = "pyspark_command_service"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.3"
jinja2 = "^3.1.2"
pyspark = "^3.3.2"
kubernetes = "^26.1.0"
jupyterlab = "^3.6.3"
pandas = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
